# FIR_Management_System

./: README.md
reactjs/src/: ApplicationCSS.css  index.js  loginPage.js
reactjs/src/component/: NavBarAdmin.js  NavBarElements.js  NavBarUser.js  accusedAdd.jsx  accusedDelete.jsx  accusedUpdate.jsx  addAdmin.js  displaySearch.jsx  file_case.js  home.jsx  offence.jsx  offence_add.jsx  offence_update.jsx  profile.js  searchAdmin.jsx  searchUser.jsx  updateCase.jsx  viewFIRAdmin.jsx  view_firs.jsx
rust/: Cargo.toml  auth.rs  db.rs  main.rs
