[package]
name = "criminal"
version = "0.1.0"
authors = ["srividya-adiga <srividya.ah@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.8"
rocket_contrib = "*"
rocket_cors = "*"
postgres = { version = "0.19.1", features = ["with-chrono-0_4"] }
rust-crypto = "^0.2"
chrono = "0.4"
serde = { version = "*", features = ["derive"]}
